# cCLI

./: .clang-format  .gitignore  CMakeLists.txt  README.md  demo.c
.github/workflows/: build.yaml
src/: cli.c  cli.h  cli_log.c  cli_log.h  cli_util.c  cli_util.h
